@@ -121,6 +121,9 @@ default module =
 ; agent max memory - set a memory limit for the agent (agent will be restarted if the rss is higher, set to 0 to disabled)
 ;agent max memory = 256M
 
+; agent user - set user this agent should run as (requires root permissions)
+;agent user = nobody
+
 ; port - Port to use for the node exporter.
 ;port = ${/settings/WEB/server/port}
 
@@ -160,6 +163,9 @@ agent address = 127.0.0.1:9990
 
 ; agent max memory - set a memory limit for the agent (agent will be restarted if the rss is higher, set to 0 to disabled)
 agent max memory = 256M
+
+; agent user - set user this agent should run as (requires root permissions)
+agent user = nobody
 
 ; port - Port to use for the node exporter.
 port = ${/settings/WEB/server/port}
